--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="index1" class="logo d-flex align-items-center">
-        <img src="assets/img/slide-11.png" alt="">
+        <img src="static/images/slide-11.png" alt="">
         <span class="d-none d-lg-block">7ДНЕЙ_С_БЮРО</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
